[metadata]
name = PACKAGE_NAME
description = sets up a python project minimally
author = Dennis Kennetz
license = Apache2.0
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
[options]
python_requires = >= 3.7
package_dir=
  =src
zip_safe = no

[options.entry_points]
console_scripts =
    PACKAGE_NAME = PACKAGE_NAME.__main__:main

[options.extras_require]
testing =
  tox==4.6.4
  mypy==1.4.1
  pytest==7.4.0
  coverage==7.2.7
  pytest-cov==4.1.0
  ruff==0.0.277
  black==23.3.0
